--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.17",
+    "date-fns": "^4.1.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-router-dom": "^7.0.0"
